[gd_scene load_steps=2 format=2]

[ext_resource path="res://demo/items/AttributeItem.gd" type="Script" id=1]

[node name="AttributeItem" type="GridContainer"]
margin_right = 264.0
margin_bottom = 52.0
size_flags_horizontal = 5
size_flags_vertical = 5
columns = 2
script = ExtResource( 1 )

[node name="Label-v01" type="Label" parent="."]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
rect_min_size = Vector2( 80, 0 )
text = "Type"

[node name="ItemType" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 84.0
margin_right = 264.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v02" type="Label" parent="."]
margin_top = 33.0
margin_right = 80.0
margin_bottom = 47.0
rect_min_size = Vector2( 80, 0 )
text = "Value"

[node name="ItemValue" type="LineEdit" parent="."]
unique_name_in_owner = true
margin_left = 84.0
margin_top = 28.0
margin_right = 264.0
margin_bottom = 52.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
